first draft of redis_slave

--- a/redis_master/Dockerfile
+++ b/redis_master/Dockerfile
@@ -7,7 +7,6 @@ FROM pseudomuto/base_redis
 MAINTAINER David Muto <david.muto@gmail.com>
 
 # Update to invalidate image cache
-ENV PMDF_REFRESHED_AT 20140722232113
+ENV PMDF_REFRESHED_AT 20140724003411
 
-ENTRYPOINT ["redis-server"]
-CMD ["--logfile", "/var/log/redis/redis-master.log"]
+ENTRYPOINT ["redis-server", "--logfile", "/var/log/redis/redis-master.log"]
