fixing some of the little things...

--- a/redis_slave/Dockerfile
+++ b/redis_slave/Dockerfile
@@ -9,4 +9,5 @@ MAINTAINER David Muto <david.muto@gmail.com>
 # Update to invalidate image cache
 ENV PMDF_REFRESHED_AT 20140724003411
 
-ENTRYPOINT ["redis-server", "--logfile /var/log/redis/redis-%H.log", "--slaveof redis_master 6379"]
+ENTRYPOINT ["redis-server", "--slaveof redis_master 6379"]
+CMD ["--logfile /var/log/redis/redis-%H.log"]
